fixed article bloc overflowing container on chrome

--- a/resources/styles/theme/_articles.scss
+++ b/resources/styles/theme/_articles.scss
@@ -4,10 +4,9 @@
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
 }
-
-
 .emergence-articles {
   min-height: 400px;
+  align-items: stretch;
   a {
     text-decoration: none;
     &:hover {
@@ -21,10 +20,16 @@
     height: 100%;
     background: linear-gradient(to top,$primary, rgba($primary,0.3) 45%,rgba($primary,0.2) );
   }
+  .articles-secondary {
+    flex: 1;
+  }
+  .article-principal {
+    flex: 1;
+  }
   .article {
     background-size: cover;
-    flex: 1 1 1;
-    height: 50%;
+    background-position: center;
+    flex: 1;
   }
 
   .article-meta {
@@ -38,7 +43,6 @@
       margin: 1em;
       margin-left: 2em;
     }
-
     .article-content {
       margin: 1em;
     }
